--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "readme": "",
   "repository": "",
   "version": "0.0.0",
-  "readme": "",
-  "repository": "",
-  "dependencies": {},
+  "dependencies": {
+    "phaser": "^2.3.0"
+  },
   "browser": {
-    "phaser": "./src/bower_components/phaser-official/build/phaser.min.js"
+    "phaser": "./node_modules/phaser/build/phaser.min.js"
   },
   "browserify": {
     "transform": [
@@ -23,10 +23,11 @@
     "browser-sync": "~0.8.2",
     "browserify-shim": "~3.4.1",
     "browserify": "~3.36.0",
+    "coffee-script": "~1.9.1",
     "coffeeify": "~0.6.0",
     "connect": "~2.14.3",
     "gulp-changed": "~0.3.0",
-    "gulp-compass": "~1.1.8",
+    "gulp-sass": "~1.3.3",
     "gulp-imagemin": "~0.1.5",
     "gulp-notify": "~1.2.4",
     "gulp-open": "~0.2.8",
@@ -37,9 +38,7 @@
     "pretty-hrtime": "~0.2.1"
   },
   "scripts": {
-    "post-install": "node ./node_modules/bower/bin/bower install",
     "start": "node ./node_modules/gulp/bin/gulp.js",
-
     "build": "node ./node_modules/gulp/bin/gulp.js build"
   }
 }
