--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "repository": "",
   "version": "0.0.0",
   "dependencies": {
-    "phaser": "^2.3.0"
+    "express": "^4.12.3",
+    "phaser": "^2.3.0",
+    "socket.io": "^1.3.5",
+    "swig": "^1.4.2"
   },
   "browser": {
     "phaser": "./node_modules/phaser/build/phaser.min.js"
@@ -21,21 +24,22 @@
   },
   "devDependencies": {
     "browser-sync": "~0.8.2",
-    "browserify-shim": "~3.4.1",
     "browserify": "~3.36.0",
+    "browserify-shim": "~3.4.1",
     "coffee-script": "~1.9.1",
     "coffeeify": "~0.6.0",
     "connect": "~2.14.3",
+    "gulp": "~3.8.0",
     "gulp-changed": "~0.3.0",
-    "gulp-sass": "~1.3.3",
+    "gulp-coffee": "^2.3.1",
     "gulp-imagemin": "~0.1.5",
     "gulp-notify": "~1.2.4",
     "gulp-open": "~0.2.8",
-    "gulp": "~3.8.0",
-    "vinyl-source-stream": "~0.1.1",
-    "watchify": "~0.10.1",
+    "gulp-sass": "~1.3.3",
     "gulp-util": "~2.2.14",
-    "pretty-hrtime": "~0.2.1"
+    "pretty-hrtime": "~0.2.1",
+    "vinyl-source-stream": "~0.1.1",
+    "watchify": "~0.10.1"
   },
   "scripts": {
     "start": "node ./node_modules/gulp/bin/gulp.js",
